<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content">
            <Button  style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/dictionaryButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/dictionary"
                />
            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/leitnerButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/leitner"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/ieltsWordsButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ielts_words"
                />
            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/irregularVerbsButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/irregular_verbs"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/idiomsButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/idioms"
                />
            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/essayButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/essays"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/phrasalButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/phrasal"
                />
            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/notsetButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/essays"
                />
        </LinearLayout>
    </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>