<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical">
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="9"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/simple"
            android:layout_height="match_parent"
            tools:ignore="NestedWeights" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/past"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/past_participle"
            android:layout_height="match_parent" />

    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/irregularVerbsLinearLayout"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

</LinearLayout>